Fix the parsing errors and add a flew wrap to the image section

--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ main {
   display: flex;
   flex-direction: column;
   position: relative;
+  flex-wrap: wrap;
   max-width: 50em;
 }
 
@@ -93,6 +94,7 @@ img {
   .img-section {
     flex-direction: row;
     align-items: center;
+    flex-wrap: nowrap;
   }
 
   .content {
@@ -105,6 +107,8 @@ img {
     align-items: center;
     max-width: 50%;
   }
+
+}
 
 @media only screen and (min-width: 60em) {
 
@@ -120,6 +124,8 @@ img {
   img {
     padding: 1rem 0;
   }
+
+}
 
 @media only screen and (min-width: 90em) {
 
